Upcomming Match Page Updated

--- a/index.html
+++ b/index.html
@@ -73,25 +73,26 @@
       <!-- Navigation Bars  -->
       <article class="match-info">
         <section class="navigation">
-          <a href="upcomming.html"
-            ><button class="nav-1">Upcomming Matches</button>
-          </a>
+          <a href="upcomming.html"><button>Upcomming Matches</button> </a>
           <a
             href="https://www.fifa.com/fifaplus/en/articles/qatar-2022-all-qualified-teams-groups-dates-match-schedule-tickets-more"
             target="_blank"
             rel="noopener noreferrer"
           >
-            <button class="nav-2">World Cup Groups</button></a
+            <button id="nav-2">World Cup Groups</button></a
           >
 
-          <a href="index.html"><button class="nav-3">Blogs</button></a>
+          <a href="index.html"><button id="nav-1">Blogs</button></a>
         </section>
         <!-- Blogs Section  -->
-        <section class="blogs">
+        <section class="blogs" id="blog-images">
           <section class="blog">
             <img src="images/Blogs/blog-1.png" alt="" />
             <button class="transfer-button">Transfer</button>
-            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+            <h3>
+              Transfer Live: After Neymar's flawless performance PGS thrives
+              again
+            </h3>
             <div class="clock-comment">
               <div class="icons">
                 <p>
@@ -100,7 +101,7 @@
               </div>
               <div class="icons">
                 <p>
-                  <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
+                  <i class="fa-regular fa-comment-dots icon"></i><span>53</span>
                 </p>
               </div>
             </div>
@@ -108,7 +109,7 @@
           <section class="blog">
             <img src="images/Blogs/blog-2.png" alt="" />
             <button class="transfer-button">Transfer</button>
-            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+            <h3>Transfer Live: National Women's team of England won by 2-0</h3>
             <div class="clock-comment">
               <div class="icons">
                 <p>
@@ -117,7 +118,7 @@
               </div>
               <div class="icons">
                 <p>
-                  <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
+                  <i class="fa-regular fa-comment-dots icon"></i><span>27</span>
                 </p>
               </div>
             </div>
@@ -125,7 +126,9 @@
           <section class="blog">
             <img src="images/Blogs/blog-3.png" alt="" />
             <button class="transfer-button">Transfer</button>
-            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+            <h3>
+              Transfer Live: CR7 leaving Juventas and joining Manchester United
+            </h3>
             <div class="clock-comment">
               <div class="icons">
                 <p>
@@ -134,7 +137,7 @@
               </div>
               <div class="icons">
                 <p>
-                  <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
+                  <i class="fa-regular fa-comment-dots icon"></i><span>31</span>
                 </p>
               </div>
             </div>
@@ -142,7 +145,9 @@
           <section class="blog">
             <img src="images/Blogs/blog-4.png" alt="" />
             <button class="transfer-button">Transfer</button>
-            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+            <h3>
+              Transfer Live: Karim Benjama is one and only hope for Real Madrid
+            </h3>
             <div class="clock-comment">
               <div class="icons">
                 <p>
@@ -151,7 +156,7 @@
               </div>
               <div class="icons">
                 <p>
-                  <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
+                  <i class="fa-regular fa-comment-dots icon"></i><span>21</span>
                 </p>
               </div>
             </div>
@@ -159,7 +164,7 @@
           <section class="blog">
             <img src="images/Blogs/blog-5.png" alt="" />
             <button class="transfer-button">Transfer</button>
-            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+            <h3>Transfer Live: Once again Real Madrid fallen face down</h3>
             <div class="clock-comment">
               <div class="icons">
                 <p>
@@ -176,7 +181,10 @@
           <section class="blog">
             <img src="images/Blogs/blog-6.png" alt="" />
             <button class="transfer-button">Transfer</button>
-            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+            <h3>
+              Transfer Live: Real Madird need some miracle to join the big
+              league
+            </h3>
             <div class="clock-comment">
               <div class="icons">
                 <p>
@@ -193,7 +201,7 @@
           <section class="blog">
             <img src="images/Blogs/blog-7.png" alt="" />
             <button class="transfer-button">Transfer</button>
-            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+            <h3>Transfer Live: Liverpool once agin steal the game</h3>
             <div class="clock-comment">
               <div class="icons">
                 <p>
@@ -202,7 +210,7 @@
               </div>
               <div class="icons">
                 <p>
-                  <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
+                  <i class="fa-regular fa-comment-dots icon"></i><span>33</span>
                 </p>
               </div>
             </div>
@@ -210,7 +218,9 @@
           <section class="blog">
             <img src="images/Blogs/blog-8.png" alt="" />
             <button class="transfer-button">Transfer</button>
-            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+            <h3>
+              Transfer Live: Messi is cheered for giving number 10 to Neymar
+            </h3>
             <div class="clock-comment">
               <div class="icons">
                 <p>
@@ -219,7 +229,7 @@
               </div>
               <div class="icons">
                 <p>
-                  <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
+                  <i class="fa-regular fa-comment-dots icon"></i><span>68</span>
                 </p>
               </div>
             </div>
@@ -249,7 +259,12 @@
       <div class="view-more-button">
         <button class="learn-more-button">
           <span
-            ><a href="" target="" rel="noopener noreferrer">View More</a></span
+            ><a
+              href="https://www.goal.com/en/live-scores"
+              target="_blank"
+              rel="noopener noreferrer"
+              >View More</a
+            ></span
           >
         </button>
       </div>
@@ -257,7 +272,7 @@
     <!-- Footer Section  -->
     <footer>
       <section class="footer-info">
-        <h1>Goal</h1>
+        <h1>Football Pedia</h1>
         <hr />
         <!-- Different Page Links -->
         <div class="important-links">
