--- a/upcomming.html
+++ b/upcomming.html
@@ -26,7 +26,12 @@
       type="image/x-icon"
     />
 
-    <!-- CSS Stylesheet Link  -->
+    <!-- CSS Stylesheet Links  -->
+    <link
+      rel="stylesheet"
+      href="styles/style.css
+    "
+    />
     <link
       rel="stylesheet"
       href="styles/upcomming.css
@@ -74,171 +79,84 @@
       <article class="match-info">
         <section class="navigation">
           <a href="upcomming.html"
-            ><button class="nav-1">Upcomming Matches</button>
+            ><button id="nav-1">Upcomming Matches</button>
           </a>
           <a
             href="https://www.fifa.com/fifaplus/en/articles/qatar-2022-all-qualified-teams-groups-dates-match-schedule-tickets-more"
             target="_blank"
             rel="noopener noreferrer"
           >
-            <button class="nav-2">World Cup Groups</button></a
+            <button id="nav-2">World Cup Groups</button></a
           >
 
-          <a href="index.html"><button class="nav-3">Blogs</button></a>
+          <a href="index.html"><button>Blogs</button></a>
         </section>
         <!-- Blogs Section  -->
         <section class="blogs">
           <section class="blog">
-            <img src="images/Blogs/blog-1.png" alt="" />
-            <button class="transfer-button">Transfer</button>
-            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-            <div class="clock-comment">
-              <div class="icons">
-                <p>
-                  <i class="fa-regular fa-clock icon"></i><span>1.5 hr</span>
-                </p>
-              </div>
-              <div class="icons">
-                <p>
-                  <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
-                </p>
-              </div>
+            <div class="flag">
+              <img src="images/Flags/Flag.png" alt="" />
+              <p>VS</p>
+              <img src="images/Flags/germany Flag.png" alt="" />
+            </div>
+            <div class="date-info">
+              <h3>France VS Germany</h3>
+              <p>April 01, 2023, 1.00 AM</p>
             </div>
           </section>
           <section class="blog">
-            <img src="images/Blogs/blog-2.png" alt="" />
-            <button class="transfer-button">Transfer</button>
-            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-            <div class="clock-comment">
-              <div class="icons">
-                <p>
-                  <i class="fa-regular fa-clock icon"></i><span>1.5 hr</span>
-                </p>
-              </div>
-              <div class="icons">
-                <p>
-                  <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
-                </p>
-              </div>
+            <div class="flag">
+              <img src="images/Flags/argentina-flag.png" alt="" />
+              <p>VS</p>
+              <img src="images/Flags/Flag.png" alt="" />
+            </div>
+            <div class="date-info">
+              <h3>Argentina VS France</h3>
+              <p>April 05, 2023, 1.10 AM</p>
             </div>
           </section>
           <section class="blog">
-            <img src="images/Blogs/blog-3.png" alt="" />
-            <button class="transfer-button">Transfer</button>
-            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-            <div class="clock-comment">
-              <div class="icons">
-                <p>
-                  <i class="fa-regular fa-clock icon"></i><span>1.5 hr</span>
-                </p>
-              </div>
-              <div class="icons">
-                <p>
-                  <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
-                </p>
-              </div>
+            <div class="flag">
+              <img src="images/Flags/brasilFlag.png" alt="" />
+              <p>VS</p>
+              <img src="images/Flags/germany Flag.png" alt="" />
+            </div>
+            <div class="date-info">
+              <h3>Brasil VS Germany</h3>
+              <p>April 07, 2023, 4.00 AM</p>
             </div>
           </section>
           <section class="blog">
-            <img src="images/Blogs/blog-4.png" alt="" />
-            <button class="transfer-button">Transfer</button>
-            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-            <div class="clock-comment">
-              <div class="icons">
-                <p>
-                  <i class="fa-regular fa-clock icon"></i><span>1.5 hr</span>
-                </p>
-              </div>
-              <div class="icons">
-                <p>
-                  <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
-                </p>
-              </div>
+            <div class="flag">
+              <img src="images/Flags/germany Flag.png" alt="" />
+              <p>VS</p>
+              <img src="images/Flags/argentina-flag.png" alt="" />
+            </div>
+            <div class="date-info">
+              <h3>Germany VS Argentina</h3>
+              <p>April 13, 2023, 2.00 AM</p>
             </div>
           </section>
           <section class="blog">
-            <img src="images/Blogs/blog-5.png" alt="" />
-            <button class="transfer-button">Transfer</button>
-            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-            <div class="clock-comment">
-              <div class="icons">
-                <p>
-                  <i class="fa-regular fa-clock icon"></i><span>1.5 hr</span>
-                </p>
-              </div>
-              <div class="icons">
-                <p>
-                  <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
-                </p>
-              </div>
+            <div class="flag">
+              <img src="images/Flags/Flag.png" alt="" />
+              <p>VS</p>
+              <img src="images/Flags/brasilFlag.png" alt="" />
+            </div>
+            <div class="date-info">
+              <h3>France VS Brasil</h3>
+              <p>April 17, 2023, 1.00 AM</p>
             </div>
           </section>
           <section class="blog">
-            <img src="images/Blogs/blog-6.png" alt="" />
-            <button class="transfer-button">Transfer</button>
-            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-            <div class="clock-comment">
-              <div class="icons">
-                <p>
-                  <i class="fa-regular fa-clock icon"></i><span>1.5 hr</span>
-                </p>
-              </div>
-              <div class="icons">
-                <p>
-                  <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
-                </p>
-              </div>
+            <div class="flag">
+              <img src="images/Flags/brasilFlag.png" alt="" />
+              <p>VS</p>
+              <img src="images/Flags/argentina-flag.png" alt="" />
             </div>
-          </section>
-          <section class="blog">
-            <img src="images/Blogs/blog-7.png" alt="" />
-            <button class="transfer-button">Transfer</button>
-            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-            <div class="clock-comment">
-              <div class="icons">
-                <p>
-                  <i class="fa-regular fa-clock icon"></i><span>1.5 hr</span>
-                </p>
-              </div>
-              <div class="icons">
-                <p>
-                  <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
-                </p>
-              </div>
-            </div>
-          </section>
-          <section class="blog">
-            <img src="images/Blogs/blog-8.png" alt="" />
-            <button class="transfer-button">Transfer</button>
-            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-            <div class="clock-comment">
-              <div class="icons">
-                <p>
-                  <i class="fa-regular fa-clock icon"></i><span>1.5 hr</span>
-                </p>
-              </div>
-              <div class="icons">
-                <p>
-                  <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
-                </p>
-              </div>
-            </div>
-          </section>
-          <section class="blog blog-9">
-            <img src="images/Blogs/blog-9.png" alt="" />
-            <button class="transfer-button">Transfer</button>
-            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-            <div class="clock-comment">
-              <div class="icons">
-                <p>
-                  <i class="fa-regular fa-clock icon"></i><span>1.5 hr</span>
-                </p>
-              </div>
-              <div class="icons">
-                <p>
-                  <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
-                </p>
-              </div>
+            <div class="date-info">
+              <h3>Brasil VS Argentina</h3>
+              <p>April 20, 2023, 10.00 AM</p>
             </div>
           </section>
         </section>
