HTML & CSS Updated

--- a/upcomming.html
+++ b/upcomming.html
@@ -167,7 +167,12 @@
       <div class="view-more-button">
         <button class="learn-more-button">
           <span
-            ><a href="" target="" rel="noopener noreferrer">View More</a></span
+            ><a
+              href="https://www.goal.com/en/live-scores"
+              target="_blank"
+              rel="noopener noreferrer"
+              >View More</a
+            ></span
           >
         </button>
       </div>
@@ -175,7 +180,7 @@
     <!-- Footer Section  -->
     <footer>
       <section class="footer-info">
-        <h1>Goal</h1>
+        <h1>Football Pedia</h1>
         <hr />
         <!-- Different Page Links -->
         <div class="important-links">
